pods.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: nginx
  name: nginx-pods
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
